@@ -60,8 +60,10 @@ import org.societies.api.internal.servicelifecycle.IServiceControl;
 import org.societies.api.internal.servicelifecycle.IServiceControlRemote;
 import org.societies.api.internal.servicelifecycle.ServiceControlException;
 import org.societies.api.internal.servicelifecycle.ServiceModelUtils;
+import org.societies.api.internal.useragent.feedback.IUserFeedback;
 import org.societies.slm.servicecontrol.ServiceNegotiationCallback.ServiceNegotiationResult;
 import org.springframework.osgi.context.BundleContextAware;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.scheduling.annotation.AsyncResult;
 
 /**
@@ -82,7 +84,7 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 	private INegotiation policyNegotiation;
 	private ICisManager cisManager;
 	private IDeviceManager deviceMngr;
-	
+	private IUserFeedback userFeedback;
 	private static HashMap<Long,BlockingQueue<Service>> installServiceMap = new HashMap<Long,BlockingQueue<Service>>();
 	private static HashMap<Long,BlockingQueue<Service>> uninstallServiceMap = new HashMap<Long,BlockingQueue<Service>>();
 	
@@ -138,6 +140,14 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 		return serviceControlRemote;
 	}
 	
+	public IUserFeedback getUserFeedback(){
+		return userFeedback;
+	}
+	
+	public void setUserFeedback(IUserFeedback userFeedback){
+		this.userFeedback = userFeedback;
+	}
+	
 	@Override
 	public void setBundleContext(BundleContext bundleContext) {
 		
@@ -147,6 +157,7 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 	}
 
 	
+	@Async
 	@Override
 	public Future<ServiceControlResult> startService(ServiceResourceIdentifier serviceId)
 			throws ServiceControlException {
@@ -265,6 +276,7 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 	}
 
 
+	@Async
 	@Override
 	public Future<ServiceControlResult> stopService(ServiceResourceIdentifier serviceId)
 			throws ServiceControlException {
@@ -374,6 +386,8 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 
 	}
 
+	@Async
+	@Override
 	public Future<ServiceControlResult> installService(Service serviceToInstall) 
 			throws ServiceControlException {
 		
@@ -408,12 +422,16 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 				else
 					deviceCommonInfo.setContextSource(false);
 				
+				logger.debug("About to install!");
+
 				String deviceId = getDeviceMngr().fireNewSharedDevice(deviceCommonInfo, deviceNodeId);
 				
 				if(deviceId == null){
 					if(logger.isDebugEnabled()) 
 						logger.debug("Problem installing device!");
 					returnResult.setMessage(ResultMessage.OSGI_PROBLEM);
+					getUserFeedback().showNotification("Service '"+serviceToInstall.getServiceName()+"' not installed: " + returnResult.getMessage());
+
 					return new AsyncResult<ServiceControlResult>(returnResult);	
 
 				} else{
@@ -421,6 +439,8 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 						logger.debug("Device installed with id: " + deviceId);
 					returnResult.setServiceId(ServiceModelUtils.generateServiceResourceIdentifierForDevice(serviceToInstall, deviceId));
 					returnResult.setMessage(ResultMessage.SUCCESS);
+					getUserFeedback().showNotification("Service '"+serviceToInstall.getServiceName()+"' installed!");
+
 					return new AsyncResult<ServiceControlResult>(returnResult);	
 				}
 				
@@ -432,13 +452,14 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 				logger.debug("Trying to do policy negotiation!");
 			
 			IIdentity providerNode = getCommMngr().getIdManager().fromJid(serviceToInstall.getServiceInstance().getFullJid());
-
+			INetworkNode myNode = getCommMngr().getIdManager().getThisNetworkNode();
+			
 			if(logger.isDebugEnabled())
 				logger.debug("Got the provider IIdentity, now creating the Requestor");
 		
 			RequestorService provider = new RequestorService(providerNode, serviceToInstall.getServiceIdentifier());
 			
-			/*
+			
 			ServiceNegotiationCallback negotiationCallback = new ServiceNegotiationCallback();
 			getPolicyNegotiation().startNegotiation(provider, negotiationCallback);
 			ServiceNegotiationResult negotiationResult = negotiationCallback.getResult();
@@ -446,6 +467,8 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 			if(negotiationResult == null){
 				if(logger.isDebugEnabled()) logger.debug("Problem doing negotiation!");
 				returnResult.setMessage(ResultMessage.NEGOTIATION_ERROR);
+				getUserFeedback().showNotification("Service '"+serviceToInstall.getServiceName()+"' not installed: " + returnResult.getMessage());
+
 				return new AsyncResult<ServiceControlResult>(returnResult);
 			} 
 			
@@ -454,32 +477,43 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 				if(logger.isDebugEnabled())
 					logger.debug("Negotiation was not successful!");
 				returnResult.setMessage(ResultMessage.NEGOTIATION_FAILED);
+				getUserFeedback().showNotification("Service '"+serviceToInstall.getServiceName()+"' not installed: " + returnResult.getMessage());
+
 				return new AsyncResult<ServiceControlResult>(returnResult);
 			}	
 			
 			if(logger.isDebugEnabled())
 					logger.debug("Negotiation was successful! URI returned is: " + negotiationResult.getServiceUri());
-			*/
+			
+			getUserFeedback().showNotification("Service '"+serviceToInstall.getServiceName()+"' : negotiation success!");
+
 			// Now install the client!
 			if(serviceToInstall.getServiceType().equals(ServiceType.THIRD_PARTY_WEB)){
 				if(logger.isDebugEnabled()) logger.debug("This is a web-type service, no client to install!");
 				//serviceToInstall.setServiceEndpoint(negotiationResult.getServiceUri().toString());				
 
+				ServiceInstance si = serviceToInstall.getServiceInstance();
+				si.setParentIdentifier(serviceToInstall.getServiceIdentifier());
+				si.setParentJid(serviceToInstall.getServiceInstance().getFullJid());
+				si.setFullJid(myNode.getJid());
+				si.setCssJid(myNode.getBareJid());
+				serviceToInstall.setServiceInstance(si);
+				
 				List<Service> addServices = new ArrayList<Service>();
 				addServices.add(serviceToInstall);
 				getServiceReg().registerServiceList(addServices);
 
 				logger.info("Installed web-type third-party service.");
 				returnResult.setMessage(ResultMessage.SUCCESS);
-				
-			
+				getUserFeedback().showNotification("Service '"+serviceToInstall.getServiceName()+"' installed!");
+
 			} else{
 									
 				if(logger.isDebugEnabled()) logger.debug("This is a client-based service, we need to install it");
 					
 				Future<ServiceControlResult> asyncResult = null;
-				//URL bundleLocation = negotiationResult.getServiceUri().toURL();
-				URL bundleLocation = serviceToInstall.getServiceInstance().getServiceImpl().getServiceClient().toURL();
+				URL bundleLocation = negotiationResult.getServiceUri().toURL();
+				//URL bundleLocation = new URL(serviceToInstall.getServiceInstance().getServiceImpl().getServiceClient());
 
 				asyncResult = installService(bundleLocation);
 				ServiceControlResult result = asyncResult.get();
@@ -489,6 +523,8 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 						logger.debug("Error with installation! ");
 						
 					returnResult.setMessage(ResultMessage.COMMUNICATION_ERROR);
+					getUserFeedback().showNotification("Service '"+serviceToInstall.getServiceName()+"' not installed: " + returnResult.getMessage());
+
 					return new AsyncResult<ServiceControlResult>(returnResult);	
 				} 
 					
@@ -499,6 +535,7 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 						
 					ServiceInstance newServiceInstance = newService.getServiceInstance();
 					newServiceInstance.setParentJid(serviceToInstall.getServiceInstance().getFullJid());
+					newServiceInstance.setParentIdentifier(serviceToInstall.getServiceIdentifier());
 					newService.setServiceInstance(newServiceInstance);
 					getServiceReg().updateRegisteredService(newService);
 						
@@ -506,10 +543,14 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 					logger.info("Installed shared third-party service client!");
 					returnResult.setServiceId(result.getServiceId());
 					returnResult.setMessage(result.getMessage());
+					getUserFeedback().showNotification("Service '"+serviceToInstall.getServiceName()+"' installed!");
+
 				} else{
 					if(logger.isDebugEnabled())
 						logger.debug("Installation of client was not successful");
 					returnResult.setMessage(result.getMessage());
+					getUserFeedback().showNotification("Service '"+serviceToInstall.getServiceName()+"' not installed: " + result.getMessage());
+
 				}
 	
 			}
@@ -519,8 +560,11 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 			
 		
 		} catch (Exception ex) {
+			getUserFeedback().showNotification("Service '"+serviceToInstall.getServiceName()+"' : Problems!");
 			logger.error("Exception while attempting to install a bundle: " + ex.getMessage());
+			ex.printStackTrace();
 			throw new ServiceControlException("Exception while attempting to install a bundle.", ex);
+
 		}
 		
 	}
@@ -574,6 +618,7 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 		
 	}
 	
+	@Async
 	@Override
 	public Future<ServiceControlResult> installService(URL bundleLocation)
 			throws ServiceControlException {
@@ -647,6 +692,7 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 
 	}
 
+	@Async
 	@Override
 	public Future<ServiceControlResult> installService(URL bundleLocation, IIdentity node)
 			throws ServiceControlException {
@@ -717,6 +763,7 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 
 	}
 
+	@Async
 	@Override
 	public Future<ServiceControlResult> installService(URL bundleLocation, String nodeJid)
 			throws ServiceControlException {
@@ -746,6 +793,7 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 	}
 	
 	
+	@Async
 	@Override
 	public Future<ServiceControlResult> uninstallService(ServiceResourceIdentifier serviceId)
 			throws ServiceControlException {
@@ -939,6 +987,7 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 		queue.add(newService);
 	}
 	
+	@Async
 	@Override
 	public Future<ServiceControlResult> shareService(Service service, String nodeJid)
 			throws ServiceControlException {
@@ -967,6 +1016,7 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 
 	}
 
+	@Async
 	@Override
 	public Future<ServiceControlResult> shareService(Service service, IIdentity node) throws ServiceControlException {
 		
@@ -1065,6 +1115,7 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 			
 	}
 
+	@Async
 	@Override
 	public Future<ServiceControlResult> unshareService(Service service, String nodeJid) throws ServiceControlException {
 		
@@ -1091,6 +1142,7 @@ public class ServiceControl implements IServiceControl, BundleContextAware {
 		}
 	}
 
+	@Async
 	@Override
 	public Future<ServiceControlResult> unshareService(Service service, IIdentity node) throws ServiceControlException {
 
